# VL53LXCH

./: CMakeLists.txt  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  component.mk  main.c  platform.c  platform.h  vl53lx_test.c  vl53lx_test.h
main/VL53LMZ_ULD_API/inc/: vl53lmz_api.h  vl53lmz_buffers.h
main/VL53LMZ_ULD_API/src/: vl53lmz_api.c
main/examples/: Example_10_motion_indicator.c  Example_11_motion_indicator_with_detection_thresholds.c  Example_12_cnh_data.c  Example_13_rtrobot_software.c  Example_1_ranging_basic.c  Example_2_get_set_params.c  Example_3_ranging_modes.c  Example_4_power_modes.c  Example_5_multiple_targets_per_zone.c  Example_6_I2C_and_RAM_optimization.c  Example_7_calibrate_xtalk.c  Example_8_vizualize_xtalk_data.c  Example_9_detection_thresholds.c  examples.h
